fixed overflow error on index (overflow now displays)

--- a/css/style.css
+++ b/css/style.css
@@ -83,7 +83,7 @@ a:active {
 body {
   background-color: #000;
   margin: 0px;
-  /* overflow: hidden; */
+  overflow: auto;
 }
 
 @media screen and (max-width: 560px) {
